# SealBot

./: .gitignore  README.md  SELFHOSTING.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/sealbot/: main.py  settings.py
src/sealbot/extensions/: ping.py  seal.py  stats.py
